--- a/styles/main.css
+++ b/styles/main.css
@@ -9913,6 +9913,25 @@ body {
     border-radius: none;
 }
 
+.gallery-container {
+    margin: 0 10px 6px 0;
+    border-radius: 3px;
+    overflow: hidden;
+  }
+  
+  .gallery {
+    display: flex;
+    transition: transform 0.5s ease;
+  }
+  
+  .gallery img {
+    min-width: 300px;
+    min-height: 100%;
+    object-fit: cover;
+  }
+
+
+
 @media (max-width: 992px) {
     .ww-photo-gallery .card-columns {
         -webkit-column-count: 2;
